<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Projects</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>
    <string name="projects">Projects</string>
    <string name="unnamed_project">Unnamed Project</string>
    <string name="date_of_distribution">Start: %1$s</string>
    <string name="beneficiaries">Beneficiaries: %1$d</string>
    <string name="commodities">Commodities: </string>
    <string name="households">Households: %1$d</string>
    <string name="beneficiaries_title">Beneficiaries</string>
    <string name="national_id">National ID</string>
    <string name="beneficiaries_reached" tools:ignore="PluralsCandidate">%1$d of %2$d beneficiaries reached</string>
    <string name="search_beneficiary_hint">Search</string>
    <string name="distributions">Distributions</string>
    <string name="unknown">Unknown</string>
    <string name="status">Status</string>
    <string name="distributed">Distributed</string>
    <string name="not_distributed">Not Distributed</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="distribution">Distribution</string>
    <string name="project">Project</string>
    <string name="confirm_distribution">Confirm</string>
    <string name="rescan_qr">Rescan QR</string>
    <string name="booklet_id">Booklet ID</string>
    <string name="camera_permission_dialog_title">Camera permission</string>
    <string name="camera_permission_dialog_message">If you want to scan a QR code you need to grant a camera permission.</string>
    <string name="camera_permission_dialog_positive_btn_label">OK</string>
    <string name="camera_permission_dialog_negative_btn_label">Not now</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="search">Search</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="pending_local_changes">Pending local changes</string>
    <string name="no_pending_changes">No pending changes</string>
    <string name="current_data">Last update</string>
    <string name="sync">Sync Data</string>
    <string name="revert">Undo Assignment</string>
    <string name="logout_alert_text">Are you sure you want to log out? All application data will be erased.</string>
    <string name="humansis_id">Humansis ID</string>
    <string name="humansis_id_formatted">Humansis ID: %1$d</string>
    <string name="country">Country</string>
    <string name="settings_country_update_success">Country updated</string>
    <string name="settings_country_update_error">Invalid ISO3 code</string>
    <string name="error_invalid_username">Invalid username</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_no_internet_connection">Network connection lost</string>
    <string name="error_unknown">Unknown error</string>
    <string name="downloading">Downloading…</string>
    <string name="no_data_message">Nothing here, try to reload.</string>
    <string name="invalid_code">Invalid code</string>
    <string name="already_assigned">Already assigned code</string>
    <string name="last_update_failed">Last update failed</string>
    <string name="assign">Assign</string>
    <string name="sort_default">Grouped</string>
    <string name="sort_az">︎A &#10132; Z</string>
    <string name="sort_za">Z &#10132; A</string>
    <string name="error_service_unavailable">Service is unavailable</string>
    <string name="logout_alert_title">Log out</string>
    <string name="logout_alert_pending_changes_title">Pending changes!</string>
    <string name="logout_alert_pending_changes_text">You cannot log out right now. Pending changes need to be synchronized before log out.</string>
    <string name="show_developer_logs">Show developer logs</string>
    <string name="copy">Copy</string>
    <string name="close">Close</string>
    <string name="error_server">Server responded with error.</string>
    <string name="error_bad_request">Bad request.</string>
    <string name="error_user_not_allowed">User not allowed.</string>
    <string name="error_resource_not_found">Resource not found.</string>
    <string name="error_data_conflict">There was a data conflict.</string>
    <string name="error_server_api_changed">Server API changed.</string>
    <string name="error_too_many_requests">Too many request.</string>
    <string name="error_server_failure">Server failure</string>
    <string name="error_other">An unexpected error occurred.</string>
    <string name="show_error_detail">Show error detail</string>
    <string name="errors_list_label">The following errors have occurred:</string>
    <string name="detail">Detail</string>
    <string name="KHM">KHM</string>
    <string name="SYR">SYR</string>
    <string name="UKR">UKR</string>
    <string name="ETH">ETH</string>
    <string name="warning_country_change">Warning: Changing country will erase your current data!</string>
    <string name="unknwon_error">Unknown error has occurred.</string>
    <string name="download_error">Couldn\'t download %s.</string>
    <string name="auth_expiration_explanation">You were logged out because your session has expired. Your data is still saved on the device. Log in to sync.</string>
    <string name="sync_error">There was an error during synchronization.</string>
    <string name="dont_save">Don\'t save</string>
    <string name="confirm_scan_question">Do you want to confirm the scanned code?</string>
    <string name="confirm_scan_title">Confirm booklet</string>
    <string name="referral_type_none">None</string>
    <string name="referral_type_health">Health</string>
    <string name="referral_type_protection">Protection</string>
    <string name="referral_type_shelter">Shelter</string>
    <string name="referral_type_nutrition">Nutrition</string>
    <string name="referral_type_other">Other</string>
    <string name="referral_validation_error_xor">Fill in both type and comment or none of them.</string>
    <string name="referral_validation_error_unset">Can\'t remove type.</string>
    <string name="cancel">Cancel</string>
    <string name="referral_type_label">Type</string>
    <string name="referral_note_label">Comment</string>
    <string name="sync_summary" tools:ignore="PluralsCandidate">Uploaded %1$d of %2$d changes.</string>
    <string name="sync_summary_nothing">No local changes were uploaded.</string>
    <string name="expand_referral_information">Expand referral information</string>
    <string name="add_referral">Add referral</string>
    <string name="edit_referral">Edit referral information</string>
    <string name="confirm_distribution_message">Confirm to assign this item to the beneficiary</string>
    <string name="acra_notif_channel">Submit crash report</string>
    <string name="acra_notif_title">Humansis crashed</string>
    <string name="acra_notif_text">Sorry, the app crashed. Please send a report to the developers.</string>
    <string name="acra_notif_send_button">Send</string>
    <string name="acra_email_subject">Android Crash Report</string>
    <string name="scan_card">Scan card</string>
    <string name="smartcard_id">Scanned Smartcard ID</string>
    <string name="you_need_to_enable_nfc">You need to enable NFC in order to scan cards</string>
    <string name="no_nfc_available">No NFC available</string>
    <string name="pin">Card PIN</string>
    <string name="please_enter_pin">Please enter PIN</string>
    <string name="error_card_mismatch">Error: Card mismatch</string>
    <string name="card_mismatch_message">This beneficiary already have an active card assigned and it does not match the card scanned. By continuing, the old card will be blocked. Are you sure you want to proceed?</string>
    <string name="remove_card">Remove</string>
    <string name="card_mismatch">Error. Please scan the same old card.</string>
    <string name="smartcard_id_old">Owned smartcard</string>
    <string name="none">none</string>
    <string name="old_card">old card</string>
    <string name="new_card">new card</string>
    <string name="ok">OK</string>
    <string name="card_locked">This card is locked and cannot be used anymore.</string>
    <string name="incorrect_pin">Invalid PIN</string>
    <string name="invalid_data">Data on the card are not valid for this request.</string>
    <string name="invalid_version">Invalid version.</string>
    <string name="currency_mismatch">You are trying to add money to a card with different currency. Use \"new card\" option instead to delete old funds and create new one with new currency.</string>
    <string name="card_error">Error during the card scanning. Please try again.</string>
    <string name="delete_card_first">Cannot undo assigment. Please remove the assigned card first.</string>
    <string name="scan_the_card">Scan the card</string>
    <string name="tag_lost_card_error">Scanning interrupted. Please scan the card again.</string>
    <string name="different_user_card_error">This card was already assigned to a different user</string>
    <string name="success">Success!</string>
    <string name="card_updated">Card Updated!</string>
    <string name="export_logs">Send logs</string>
    <string name="logs_dialog_title">Share logs</string>
    <string name="logs_dialog_message">Would you like to share logs?</string>
    <string name="logs_dialog_email_button">Share</string>
    <string name="scanning_card_pin">PIN: %1$s</string>
    <string name="change_pin">Change Pin</string>
    <string name="changing_pin_result">New PIN: %1$s</string>
    <string name="menu">menu</string>
    <string name="synchronize">synchronize</string>
    <string name="loading">loading</string>
    <string name="read_balance">Read balance</string>
    <string name="utilities">Utilities</string>
    <string name="initialize_cards">Initialize cards</string>
    <string name="scan_another_card">Scan another card</string>
    <string name="card_initialized">Card was successfully initialized</string>
    <string name="scan_card_again">Please scan the card again.</string>
    <string name="email">Email</string>
    <string name="version">v%1$s</string>
    <string name="error_expired_password">You must login to web app and change password</string>
    <string name="environment">Environment: %1$s</string>
    <string name="remote">REMOTE: %1$s</string>
    <string name="scanning_card_balance">Total balance: %1$s</string>
    <string name="expiration_date_formatted">\nExpiration date: %1$s</string>
    <string name="product_type_limit_formatted">\n%1$s: %2$s remaining</string>
    <string name="food">Food</string>
    <string name="nonfood">Non-food</string>
    <string name="cashback">Cashback</string>
    <string name="card_balance_expired">Card balance has expired</string>
    <string name="preparing_logs">Preparing logs.\nPlease wait, this may take a while.</string>
    <string name="token_missing_or_expired">You have been logged out because your authentication token has expired or is missing.</string>
    <string name="upload_error">Couldn\'t upload %1$s.</string>
    <string name="logs">Logs</string>
    <string name="card_empty">This card is empty</string>
    <string name="logs_upload_failed">Logs upload failed. Would you like to send them manually?</string>
    <string name="tax_number">Tax Number</string>
    <string name="passport">Passport</string>
    <string name="family_registration">Family Registration</string>
    <string name="birth_certificate">Birth Certificate</string>
    <string name="drivers_license">Driver’s License</string>
    <string name="camp_id">Camp ID</string>
</resources>