<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@id/projectsFragment"
                android:icon="@drawable/ic_description_blue_24dp"
                android:title="@string/menu_home"/>

        <item
                android:id="@id/settingsFragment"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings"/>
    </group>

    <item
        android:title="@string/utilities">

        <menu>

            <item
                android:id="@+id/action_read_balance"
                android:icon="@drawable/ic_money"
                android:title="@string/read_balance"/>

            <item
                android:id="@+id/action_initialize_cards"
                android:icon="@drawable/ic_card"
                android:title="@string/initialize_cards"/>

            <item
                android:id="@+id/dummy_item"
                android:title=""
                android:enabled="false"/>

        </menu>

    </item>


</menu>
